Digital clock & Base tweaks

--- a/pages/DigitalClock.html
+++ b/pages/DigitalClock.html
@@ -8,20 +8,22 @@
     <title>Playing with JS</title>
 
     <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="DigitalClock.css">
 </head>
 
 <body>
     <header>
-        <h1>Playing With JavaScript</h1>
+        <a href="/">
+            <h1>Playing With JavaScript - Digital Clock</h1>
+        </a>
         <h2>RedFox0x20 - M7TWS</h2>
     </header>
     <div class="seperator"></div>
-    <div class="content flex-container justify-content-evenly">
-        <a class="button link-button" href="/pages/DigitalClock.html">
-            <p class="button-text">Digital clock</p>
-        </a>
+    <div class="content">
+        <p id="DigitalClock">00:00:00</p>
     </div>
+
+    <script src="DigitalClock.js"></script>
 </body>
 
 </html>
