--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playing with JS</title>
 
-    <link rel="stylesheet" href="/css/base.css">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
     </header>
     <div class="seperator"></div>
     <div class="content flex-container justify-content-evenly">
-        <a class="button link-button" href="/pages/DigitalClock.html">
+        <a class="button link-button" href="pages/DigitalClock.html">
             <p class="button-text">Digital clock</p>
         </a>
     </div>
