--- a/pages/DigitalClock.html
+++ b/pages/DigitalClock.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playing with JS</title>
 
-    <link rel="stylesheet" href="/css/base.css">
+    <link rel="stylesheet" href="../css/base.css">
     <link rel="stylesheet" href="DigitalClock.css">
 </head>
 
