--- a/pages/DigitalClock.html
+++ b/pages/DigitalClock.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <a href="/">
+        <a href="../">
             <h1>Playing With JavaScript - Digital Clock</h1>
         </a>
         <h2>RedFox0x20 - M7TWS</h2>
