Styling and Description

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </header>
     <div class="seperator"></div>
     <div class="content flex-container justify-content-evenly">
-        <a class="button link-button" href="pages/DigitalClock.html">
+        <a class="button link-button" href="pages/DigitalClock.html" target="_blank">
             <p class="button-text">Digital clock</p>
         </a>
     </div>
