--- a/pages/DigitalClock.html
+++ b/pages/DigitalClock.html
@@ -21,6 +21,7 @@
     <div class="seperator"></div>
     <div class="content">
         <p id="DigitalClock">00:00:00</p>
+        <p>Digital clock using a HTML <code>&lt;p&gt;</code> tag and JavaScript. <a href="DigitalClock.js" class="link-glow" target="_blank">View JavaScript in new tab</a></p>
     </div>
 
     <script src="DigitalClock.js"></script>
