--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <h2>RedFox0x20 - M7TWS</h2>
     </header>
     <div class="seperator"></div>
+    <noscript>
+        <p class="error">These pages rely on JavaScript to be enabled to work, please enable JavaScript before going further.<br />Thank-you :)</p>
+        <div class="seperator"></div>
+    </noscript>
     <div class="content flex-container justify-content-evenly">
         <a class="button link-button" href="pages/DigitalClock.html" target="_blank">
             <p class="button-text">Digital clock</p>
