--- a/pages/DigitalClock.html
+++ b/pages/DigitalClock.html
@@ -19,6 +19,10 @@
         <h2>RedFox0x20 - M7TWS</h2>
     </header>
     <div class="seperator"></div>
+    <noscript>
+        <p class="error">These pages rely on JavaScript to be enabled to work, please enable JavaScript before going further.<br />Thank-you :)</p>
+        <div class="seperator"></div>
+    </noscript>
     <div class="content">
         <p id="DigitalClock">00:00:00</p>
         <p>Digital clock using a HTML <code>&lt;p&gt;</code> tag and JavaScript. <a href="DigitalClock.js" class="link-glow" target="_blank">View JavaScript in new tab</a></p>
