--- a/pages/DigitalClock/DigitalClock.html
+++ b/pages/DigitalClock/DigitalClock.html
@@ -7,13 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playing with JS</title>
 
-    <link rel="stylesheet" href="css/base.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="../../css/base.css">
+    <link rel="stylesheet" href="DigitalClock.css">
 </head>
 
 <body>
     <header>
-        <h1>Playing With JavaScript</h1>
+        <a href="../../">
+            <h1>Playing With JavaScript - Digital Clock</h1>
+        </a>
         <h2>RedFox0x20 - M7TWS</h2>
     </header>
     <div class="seperator"></div>
@@ -21,14 +23,12 @@
         <p class="error">These pages rely on JavaScript to be enabled to work, please enable JavaScript before going further.<br />Thank-you :)</p>
         <div class="seperator"></div>
     </noscript>
-    <div class="content flex-container justify-content-evenly">
-        <a class="button link-button" href="pages/DigitalClock/DigitalClock.html" target="_blank">
-            <p class="button-text">Digital clock</p>
-        </a>
-        <a class="button link-button" href="pages/PasswordGenerator/PasswordGenerator.html" target="_blank">
-            <p class="button-text">Password Generator</p>
-        </a>
+    <div class="content">
+        <p id="DigitalClock">00:00:00</p>
+        <p>Digital clock using a HTML <code>&lt;p&gt;</code> tag and JavaScript. <a href="DigitalClock.js" class="link-glow" target="_blank">View JavaScript in new tab</a></p>
     </div>
+
+    <script src="DigitalClock.js"></script>
 </body>
 
 </html>
