--- a/pages/PasswordGenerator/PasswordGenerator.html
+++ b/pages/PasswordGenerator/PasswordGenerator.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <a href="../../">
-            <h1>Playing With JavaScript - Digital Clock</h1>
+            <h1>Playing With JavaScript - Password Generator</h1>
         </a>
         <h2>RedFox0x20 - M7TWS</h2>
     </header>
