--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <a class="button link-button" href="pages/PasswordGenerator/PasswordGenerator.html" target="_blank">
             <p class="button-text">Password Generator</p>
         </a>
+        <a class="button link-button" href="pages/Modals/Modals.html" target="_blank">
+            <p class="button-text">Modals</p>
+        </a>
     </div>
 </body>
 
