Numbers in password
Somehow I missed this the first time around, but now passwords can be generated to include numbers! :D

--- a/pages/PasswordGenerator/PasswordGenerator.html
+++ b/pages/PasswordGenerator/PasswordGenerator.html
@@ -33,7 +33,9 @@
                     <input type="checkbox" name="UseUppercaseLetters" id="Options_UppercaseLetters" checked />
                     <label for="UseLowercaseLetters">Enable uppercase letters</label><br>
                     <input type="checkbox" name="UseSymbols" id="Options_Symbols" checked />
-                    <label for="UseLowercaseLetters">Enable special symbols</label>
+                    <label for="UseLowercaseLetters">Enable special symbols</label><br>
+                    <input type="checkbox" name="UseNumbers" id="Options_Numbers" checked />
+                    <label for="UseNumbers">Enable numbers</label>
                 </div>
                 <div>
                     <p id="PasswordLength_Slider_Text" class="margin-none">Password length:</p>
