--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <a class="button link-button" href="pages/Modals/Modals.html" target="_blank">
             <p class="button-text">Modals</p>
         </a>
+        <a class="button link-button" href="pages/Storage/Storage.html" target="_blank">
+            <p class="button-text">Storage</p>
+        </a>
     </div>
 </body>
 
