--- a/pages/Storage/Storage.html
+++ b/pages/Storage/Storage.html
@@ -26,6 +26,7 @@
     <div class="content">
         <h1>Storage</h1>
         <p>Here's an example of how <code>sessionStorage</code> and <code>localStorage</code> can be used to save information on a web page.</p>
+        <p>*Storage may be used in preference to cookies as the data stored is not sent to the server with every HTTP request. <br /> They also allow for larger storage limits!</p>
         <p>Change the text, try refreshing and then close and reopen the tab to observe the difference.</p>
         <label for="sessionStorageText">This text is stored for each session</label>
         <input type="text" name="sessionStorageText" id="sessionStorageText" autocomplete="off">
