--- a/pages/Modals/Modals.html
+++ b/pages/Modals/Modals.html
@@ -16,7 +16,7 @@
         <a href="../../">
             <h1>Playing With JavaScript - Modals</h1>
         </a>
-        <h2>RedFox0x20 - M7TWS</h2>
+        <h2>RedFox0x20 - M7TWS - <a class="link-glow" href="https://github.com/RedFox0x20/PlayingWithJavaScript">View on GitHub</a></h2>
     </header>
     <div class="seperator"></div>
     <noscript>
