--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h1>Playing With JavaScript</h1>
-        <h2>RedFox0x20 - M7TWS</h2>
+        <h2>RedFox0x20 - M7TWS - <a class="link-glow" href="https://github.com/RedFox0x20/PlayingWithJavaScript">View on GitHub</a></h2>
     </header>
     <div class="seperator"></div>
     <noscript>
