--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <a class="button link-button" href="pages/Storage/Storage.html" target="_blank">
             <p class="button-text">Storage</p>
         </a>
+        <a class="button link-button" href="pages/Themes/Themes.html" target="_blank">
+            <p class="button-text">Themes</p>
+        </a>
     </div>
 </body>
 
