--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <a class="button link-button" href="pages/Themes/Themes.html" target="_blank">
             <p class="button-text">Themes</p>
         </a>
+        <a class="button link-button" href="pages/Animations/Animations.html" target="_blank">
+            <p class="button-text">Animations</p>
+        </a>
     </div>
 </body>
 
